Work around a macOS bug that prevents interaction with the client certificate selector.

Bug: 781570
Change-Id: Icaed643a358f2414dcf3fdf84bee6b6453a744ef
Reviewed-on: https://chromium-review.googlesource.com/758926
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Commit-Queue: Sidney San Martín <sdy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#515187}
Former-commit-id: abc40c5dc6f6bf7888e03f43e1794231502ab26a